# Dashboard_Piaui_Producao

./: README.md  app.py  comercio_piaui.py  dashboard_comercio_piaui.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/: Dados_POR MUNICIPIO_2020_2025.xlsx  Piaui_exp_imp-2020_2025.xlsx  dados_municipais_2020_2025.xlsx
pages/: Documentos.py  analise_Valor_agregado.py  analise_geografica.py
utils/: data_loader.py
