[project]
name = "dashboard-piaui-producao"
version = "0.1.0"
description = "Dashboard feito em streamlit para a cia. porto piaui"
authors = [
    {name = "Lukita"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.22.0)",
    "pandas (>=1.5.3)",
    "numpy (>=1.24.3)",
    "plotly (>=5.14.1)",
    "openpyxl (>=3.1.2)",
    "geopandas (>=0.12.2)",
    "matplotlib (>=3.7.1)",
    "seaborn (>=0.12.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
